--- a/android/src/main/res/layout/oauth_layout.xml
+++ b/android/src/main/res/layout/oauth_layout.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:id="@+id/oauth_layout"
 			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
+
 	<TextView
 		android:id="@+id/oauth_textview"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="44dp"
 		android:gravity="center"
 		android:text="FUCK ANDROID UI"
 		android:textSize="14sp"
-		android:textStyle="bold" />
-	<WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:id="@+id/webview"
-			  android:layout_width="fill_parent"
-			  android:layout_height="fill_parent" />
+		android:textStyle="bold"/>
+
+	<WebView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		/>
 </LinearLayout>
