--- a/android/src/main/res/layout/oauth_layout.xml
+++ b/android/src/main/res/layout/oauth_layout.xml
@@ -3,19 +3,12 @@
 			  android:id="@+id/oauth_layout"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
-			  android:orientation="vertical">
-
-	<TextView
-		android:id="@+id/oauth_textview"
-		android:layout_width="match_parent"
-		android:layout_height="44dp"
-		android:gravity="center"
-		android:text="FUCK ANDROID UI"
-		android:textSize="14sp"
-		android:textStyle="bold"/>
+			  android:orientation="vertical"
+			  android:visibility="visible">
 
 	<WebView
+		android:id="@+id/oauth_webview"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		/>
+		android:visibility="visible"/>
 </LinearLayout>
